Login Page Start

--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -8,6 +8,7 @@
 .icon-checked:before { content: '\e806'; } /* '' */
 .icon-type:before { content: '\e807'; } /* '' */
 .icon-box:before { content: '\e808'; } /* '' */
+.icon-loading:before { content: '\e809'; } /* '' */
 .icon-file:before { content: '\e80a'; } /* '' */
 .icon-pulse:before { content: '\e80b'; } /* '' */
 .icon-close:before { content: '\e80c'; } /* '' */
@@ -16,8 +17,19 @@
 .icon-play:before { content: '\e80f'; } /* '' */
 .icon-order:before { content: '\e810'; } /* '' */
 .icon-lon-arrow-left:before { content: '\e811'; } /* '' */
-.icon-look:before { content: '\e812'; } /* '' */
+.icon-lock:before { content: '\e812'; } /* '' */
 .icon-plus:before { content: '\e813'; } /* '' */
 .icon-bars:before { content: '\e814'; } /* '' */
 .icon-question:before { content: '\e815'; } /* '' */
 .icon-basket:before { content: '\e816'; } /* '' */
+.icon-search:before { content: '\e817'; } /* '' */
+.icon-align-justify:before { content: '\e818'; } /* '' */
+.icon-th-large:before { content: '\e819'; } /* '' */
+.icon-justify:before { content: '\e81a'; } /* '' */
+.icon-combined:before { content: '\e81b'; } /* '' */
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-exchange:before { content: '\f0ec'; } /* '' */
+.icon-youtube:before { content: '\f16a'; } /* '' */
+.icon-try:before { content: '\f195'; } /* '' */
+.icon-whatsapp:before { content: '\f232'; } /* '' */
