--- a/include/variables.scss
+++ b/include/variables.scss
@@ -1,12 +1,25 @@
 // color
 
-$color-1 : #78B657;
-$color-2 : #30373B;
-$color-3 : #FFFFFF;
-$color-4 : #F3F3F3;
-$color-5 : #D9D9D9;
-$color-6 : #000000;
+$color-1  : #78B657;
+$color-2  : #30373B;
+$color-3  : #FFFFFF;
+$color-4  : #F3F3F3;
+$color-5  : #D9D9D9;
+$color-6  : #000000;
+$color-7  : #039FDA;
+$color-8  : #4A4A4A;
+$color-9  : #9B9B9B;
+$color-10 : #0466BF;
+
+$facebook : #385C8E;
+$twitter : #76A9EA;
+$youtube : #D7143A;
+
 
 // font
 
-$font : 'Open Sans', sans-serif;
+$font : 'Open Sans', sans-serif; 
+
+// 
+
+$i : !important;
