--- a/include/base.scss
+++ b/include/base.scss
@@ -8,34 +8,63 @@ html {font-family: $font; font-size: 17px; line-height: 1.5; color: $color-2; -w
 
 body {margin: 0px;}
 
+img {max-width: 100%;}
+
 a,
-a:hover {text-decoration: none;}
+a:hover {text-decoration: none; color: inherit;}
+
+ul {list-style: none; padding-left: 0px;}
+
+.list-style {list-style: disc; padding-left: 20px;}
+
+.ems-hidden {display: none;}
+
+.ems-none {display: none !important}
+
+.box-sizing-none {box-sizing: border-box;}
+
+// align
+
+.text-center {text-align: center;}
 
 .float-left {float: left;}
 
 .float-right {float: right;}
 
-// buttons 
+.relative {position: relative;}
 
-.button {font-weight: 600; text-align: center; background-color: $color-1; color: $color-3; border-radius: 4px;
+.absolute {position: absolute;}
 
-    &.large {font-size: 18px; padding: 15px 56px;}
+// buttons
+
+a.button,
+a.btnDefault {font-weight: 600; text-align: center; background-color: $color-1; color: $color-3; border-radius: 4px; display: inline-block;
+
+    &.large {font-size: 18px; padding: 12px 56px;}
 
     &.small {padding: 10px 35px;}
 
     &.short {padding: 5px 41px;}
 
-    &.border {padding: 10px 45px; border: 1px solid $color-3;}
+    &.border {padding: 10px 45px; border: 1px solid $color-3; background-color: transparent;}
 
     &.small,
     &.short,
     &.border {font-size: 14px;}
+
+    &.btnFacebookLogin {background-color: $facebook;
+    
+        @extend .large;
+    
+    }
 
 }
 
 // flex
 
 .flex {display: flex;}
+
+.flex-wrap {flex-wrap: wrap;}
 
 .flex-center {justify-content: center;}
 
@@ -44,6 +73,8 @@ a:hover {text-decoration: none;}
 .flex-end {justify-content: flex-end;}
 
 .flex-middle {align-items: center;}
+
+.flex-direction-column {flex-direction: column;}
 
 // container
 
@@ -54,9 +85,56 @@ a:hover {text-decoration: none;}
 
 }
 
+.ems-page-default {padding: 50px 0px 70px 0px;}
+
 // form
 
 input:not([type=radio]):not([type=checkbox]),
 select,
-textarea {max-width: 100%; width: 100%; border: 0 none; padding: 0 10px; box-sizing: border-box; margin: 0; border-radius: 0; background: $color-3; color: $color-2; border: 1px solid $color-4; transition: .2s ease-in-out; transition-property: color,background-color,border;}
+textarea {max-width: 100%; width: 100%; border: 0 none; padding: 0 10px; box-sizing: border-box; margin: 0; border-radius: 0; background: $color-3; color: $color-2; border: 1px solid $color-4; transition: 0.2s ease-in-out; transition-property: color,background-color,border;}
 
+input:not([type=radio]):not([type=checkbox]) {height: 50px;}
+
+@mixin checkbox-radius {
+
+    .sStylerWrp_checkbox {width: 22px; margin-right: 15px; display: inline-block;
+
+        .cStyler {position: absolute; width: 20px; height: 20px; border-radius: 50%; background-color: $color-3; border: 1px solid $color-5; cursor: pointer; transition: all 0.2s ease-in;
+        
+            &.checked {background-color: $color-1; border-color: $color-1;}
+        
+        }
+
+    }
+
+}
+
+.sStylerWrp_checkbox {width: 18px; margin-right: 8px; display: inline-block; vertical-align: middle;
+
+    .cStyler {position: absolute; width: 18px; height: 18px; background-color: $color-3; border: 1px solid $color-5; cursor: pointer; transition: all 0.2s ease-in;
+    
+        &.checked {background-color: $color-1; border-color: $color-1;}
+    
+    }
+
+}
+
+.sStylerMainWrp + span,
+.checkbox + span {font-size: 13px;}
+
+
+.ems-form {
+
+    .ems-field {margin-bottom: 15px; position: relative;
+    
+        .ems-form-label {font-size: 14px; position: absolute; top: calc(50% - 10px); left: 12px; z-index: 1; transition: all .2s ease-in-out;}
+
+        &.is-completed {
+
+            .ems-form-label {font-size: 11px; top: 3px;}
+
+        }
+    
+    }
+
+}
