--- a/style.scss
+++ b/style.scss
@@ -14,4 +14,6 @@
 @import "include/home.scss";
 @import "include/widget.scss";
 @import "include/product-list.scss";
-@import "include/product-detail.scss";    
+@import "include/product-detail.scss";
+
+@import "include/content.scss";
