--- a/include/base.scss
+++ b/include/base.scss
@@ -91,7 +91,7 @@ a.btnDefault {font-weight: 600; text-align: center; background-color: $color-1; 
 
 input:not([type=radio]):not([type=checkbox]),
 select,
-textarea {max-width: 100%; width: 100%; border: 0 none; padding: 0 10px; box-sizing: border-box; margin: 0; border-radius: 0; background: $color-3; color: $color-2; border: 1px solid $color-4; transition: 0.2s ease-in-out; transition-property: color,background-color,border;}
+textarea {max-width: 100%; width: 100%; border: 0 none; padding: 0 10px; box-sizing: border-box; margin: 0; border-radius: 0; background: $color-3; color: $color-2; border: 1px solid $color-4; transition: 0.2s ease-in-out; transition-property: color,background-color,border; box-shadow: 0px 0px 0px 200px $color-3 inset;}
 
 input:not([type=radio]):not([type=checkbox]) {height: 50px;}
 
@@ -119,15 +119,16 @@ input:not([type=radio]):not([type=checkbox]) {height: 50px;}
 
 }
 
-.sStylerMainWrp + span,
-.checkbox + span {font-size: 13px;}
+.sStylerMainWrp + *,
+.checkbox + *, 
+.control-code img ~ * {font-size: 13px;}
 
 
 .ems-form {
 
     .ems-field {margin-bottom: 15px; position: relative;
     
-        .ems-form-label {font-size: 14px; position: absolute; top: calc(50% - 10px); left: 12px; z-index: 1; transition: all .2s ease-in-out;}
+        .ems-form-label {font-size: 14px; position: absolute; top: calc(50% - 10px); left: 12px; z-index: 1; transition: all .2s ease-in-out; pointer-events: none;}
 
         &.is-completed {
 
