--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -27,6 +27,7 @@
 .icon-th-large:before { content: '\e819'; } /* '' */
 .icon-justify:before { content: '\e81a'; } /* '' */
 .icon-combined:before { content: '\e81b'; } /* '' */
+.icon-minus:before { content: '\e81c'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-exchange:before { content: '\f0ec'; } /* '' */
