--- a/include/content.scss
+++ b/include/content.scss
@@ -34,6 +34,10 @@
 
     h2 {margin: 0px; font-size: 18px;}
 
-    p {margin-top: 25px; margin-bottom: 0px;}
+    p {margin-top: 15px; margin-bottom: 0px;}
+
+    address {margin-top: 15px; margin-bottom: 35px; font-style: normal; color: #888888;}
+
+    iframe {width: 100%; height: 475px; margin-top: 35px;}
 
 }
